# The-2025-NASA-Space-Apps-Challenge-AdAstrum

./: .dockerignore  .gitignore  1.ipynb  CURL_EXAMPLES.md  MODEL_INFERNCE.md  README.md  data_unification.py  docker-compose.yml  example_predict_usage.py  inference.py  kepler.ipynb  logs.bat  next.config.mjs  package-lock.json  package.json  planet_matching_cli.py  pyproject.toml  requirements.txt  start-dev.bat  stop-dev.bat  test-api.bat  test-curl.sh  train.py  unified_exoplanets.ipynb  v1.py
assets/models/: combined_model.joblib  k2_model.joblib  kepler_model.joblib  shared_imputer.joblib  toi_model.joblib
astrum_ai/: __init__.py  common.py  inference.py  planet_matching.py  training.py
backend/: README.md  habitant.py  main.py  model_api.py  model_api_mock.py  model_service.py  planet_matching.py  preprocess.py  requirements.txt  utils.py
data/: TOI_2025.10.03_23.44.18.csv  cumulative_2025.10.03_23.45.06.csv  k2pandc_2025.10.03_23.45.12.csv
data/6479204/: fig10_boyden_C.csv  fig10_watcher_i.csv  (+27 more)
frontend/: .env.development  index.html  package-lock.json  package.json
frontend_2/: .gitignore  ARCHITECTURE.md  CHECKLIST.md  LIGHTING_FIX.md  PROJECT_COMPLETE.md  README.md  SETUP.md  demo.html  index.html  package-lock.json  package.json  start.sh  test.html  vite.config.js
frontend_3/: example-realistic.html
models/: combined_model.joblib  k2_model.joblib  kepler_model.joblib  shared_imputer.joblib  toi_model.joblib
planet-viewer/: PROJECT_SUMMARY.md  generate-textures.html
texture_generator/: main.py  planet_viewer_api.py  requirements.txt
(+47 files in other folders)
